--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div class="card">
-        <div class="Wetter">
-            <h2 class="Stadt">Wetter in CyberCity</h2>
-            <div class="Datum">Am 24.04.2022</div>
-            <div class="DT">Um 00:00 Uhr</div>
-            <div class="Temperatur">Temperatur: 18 °C</div>
-            <div class="Gefühl">Gefühlt: 16 °C</div>
-            <img src="" alt="" class="Icon"/>
-            <div class="Beschreibung">Bewölkt</div>
-            <div class="UVI">UV index: </div>
-            <div class="Luftfeuchtigkeit">Luftfeuchtigkeit: 45%</div>    
-            <div class="Wind">Windgeschwindigkeit: 7 Kmh</div>
+        <div class="weather">
+            <h2 class="city">Wetter in CyberCity</h2>
+            <div class="date">Am 24.04.2022</div>
+            <div class="dt">Um 00:00 Uhr</div>
+            <div class="temperatur">Temperatur: 18 °C</div>
+            <div class="feels_like">Gefühlt: 16 °C</div>
+            <img src="" alt="" class="icon"/>
+            <div class="description">Bewölkt</div>
+            <div class="uvi">UV index: </div>
+            <div class="humidity">Luftfeuchtigkeit: 45%</div>    
+            <div class="wind">Windgeschwindigkeit: 7 Kmh</div>
             <button id = "previous">
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22" transform="matrix(-1 0 0 1 24 0)"></polygon></svg>
             </button>
