--- a/src/Umwelt22/index.html
+++ b/src/Umwelt22/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="card">
-        <div class="weather">
-            <h2 class="city">Wetter in CyberCity</h2>
+        <div class="Wetter">
+            <h2 class="Stadt">Wetter in CyberCity</h2>
             <div class="date">Am 24.04.2022</div>
             <div class="dt">Um 00:00 Uhr</div>
             <div class="temperatur">Temperatur: 18 °C</div>
@@ -20,10 +20,10 @@
             <div class="uvi">UV index: </div>
             <div class="humidity">Luftfeuchtigkeit: 45%</div>    
             <div class="wind">Windgeschwindigkeit: 7 Kmh</div>
-            <button id = "previous">
+            <button id = "previous" onclick="console.log('Previous')">
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22" transform="matrix(-1 0 0 1 24 0)"></polygon></svg>
             </button>
-            <button id = "next">
+            <button id = "next" >
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22"></polygon></svg>
             </button>
         </div>
