--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <div class = "card">
         <div class = "Pollen">
             <h2 class="Pollen">Pollenflug in CyberCity</h2>
+            <div class = "Day">Tag</div>
             <div class = "Ambrosia">Ambrosia: _   _   _</div>
             <div class = "Beifuss">Beifuss: _   _   _</div>
             <div class = "Birke">Birke: _   _   _</div>
@@ -39,6 +40,12 @@
             <div class = "Gräser">Gräser: _   _   _</div>
             <div class = "Hasel">Hasel: _   _   _</div>
             <div class = "Roggen">Roggen: _   _   _</div>
+            <button id = "previousPollen">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22" transform="matrix(-1 0 0 1 24 0)"></polygon></svg>
+            </button>
+            <button id = "nextPollen">
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22"></polygon></svg>
+            </button>
         </div>
     </div>
 </body>
