Added water level

--- a/src/index.html
+++ b/src/index.html
@@ -48,5 +48,14 @@
             </button>
         </div>
     </div>
+    <div class = "card">
+        <div class = "River">
+            <h2 class="River">Wasserstand der Meser in CyberCity</h2>
+            <div class= "water_level">Aktueller Wasserstand: x m, Trend: ++</div>
+            <div class= "last_hours">11:00:, 9:00: , 7:00: </div>
+            <div class= "last_days"> Mi: , Di: , Mo: , So: , Sa: </div>
+            <div class = "last_weeks">Vor einer Woche: cm  |  Vor zwei Wochen: cm </div>
+        </div>
+    </div>
 </body>
 </html>
