--- a/src/index.html
+++ b/src/index.html
@@ -103,16 +103,37 @@
         <div class = "warning">
         
         </div>
-    <div class="element right">
-        <div class = "card">
-            <div class = "River">
-                <h2 class="River">Wasserstand der Meser in CyberCity</h2>
-                <div class= "water_level">Aktueller Wasserstand: x m, Trend: ++</div>
-                <div class= "last_hours">11:00:, 9:00: , 7:00: </div>
-                <div class= "last_days"> Mi: , Di: , Mo: , So: , Sa: </div>
-                <div class = "last_weeks">Vor einer Woche: cm  |  Vor zwei Wochen: cm </div>
+        <div class="element right">
+            <div class = "card">
+                <div class = "River">
+                    <h2 class="River">Wasserstand der Meser in CyberCity</h2>
+                    <div class= "water_level">Aktueller Wasserstand: x m, Trend: ++</div>
+                    <div class= "last_hours">11:00:, 9:00: , 7:00: </div>
+                    <div class= "last_days"> Mi: , Di: , Mo: , So: , Sa: </div>
+                    <div class = "last_weeks">Vor einer Woche: cm  |  Vor zwei Wochen: cm </div>
+                </div>
             </div>
         </div>
-    </div>
+        <div class = "element bottom">
+            <div class = "card">
+                <div class = "Pollen">
+                    <h2 class="Pollen">Pollenflug in CyberCity</h2>
+                    <div class = "Day">Tag</div>
+                    <div class = "Ambrosia">Ambrosia: _   _   _</div>
+                    <div class = "Beifuss">Beifuss: _   _   _</div>
+                    <div class = "Birke">Birke: _   _   _</div>
+                    <div class = "Erle">Erle: _   _   _</div>
+                    <div class = "Esche">Esche: _   _   _</div>
+                    <div class = "Gräser">Gräser: _   _   _</div>
+                    <div class = "Hasel">Hasel: _   _   _</div>
+                    <div class = "Roggen">Roggen: _   _   _</div>
+                    <button id = "previousPollen">
+                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22" transform="matrix(-1 0 0 1 24 0)"></polygon></svg>
+                    </button>
+                    <button id = "nextPollen">
+                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22"></polygon></svg>
+                    </button>
+                </div>
+            </div>
 </body>
 </html>
