--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Wetter in CyberCity</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./api-handler.js" defer></script>
+    <script src="api-handler.js" defer></script>
 </head>
 <body>
     <div class = "element">
