--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -127,6 +127,7 @@
                             <h2>
                                 Aktivitäten in CyberCity
                             </h2>
+                            <div class="aktivitiesText">Heute ist Mitternachts-Shopping bis 2 Uhr!</div>
                         </div>
 
                         <div class = "bottom right">
