--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -110,7 +110,7 @@
             </div>
             <div class = "warning">
                 <h2 class="warnungh2">ACHTUNG HOCHWASSER</h2>
-                <div class="Warnung Text">Der stand der Meser wird in den folgenden Tagen stark steigen, bitte beachten sie die hinweise der Feuerwehr!</div>
+                <div class="Warnung Text">Der stand der Meser wird in den folgenden Tagen stark steigen, bitte beachten sie die Hinweise der Feuerwehr!</div>
             </div>
         </div>
             
