Added water level diagram

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -113,7 +113,7 @@
                 <div class="Warnung Text">Der stand der Meser wird in den folgenden Tagen stark steigen, bitte beachten sie die Hinweise der Feuerwehr!</div>
             </div>
         </div>
-            
+
             <div class="element right">
                 <div class = "River right">
                     <h2 class="River">Wasserstand der Meser in CyberCity</h2>
@@ -121,6 +121,9 @@
                     <div class= "last_hours">11:00:, 9:00: , 7:00: </div>
                     <div class= "last_days">Mi: , Di: , Mo: , So: , Sa: </div>
                     <div class = "last_weeks">Vor einer Woche: cm  |  Vor zwei Wochen: cm </div>
+                    <a href="riverDiagramm.html">
+                        <button a href="riverDiagramm.html" id="riverDetail" >Details anzeigen</button>
+                    </a>
                 </div>
                     <div class="mobileRight">
                         <div class="aktivities right">
