Small design fixes + landingpage link

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -10,9 +10,11 @@
 <body>
     <div class = "main">
         <div class = "element left">
-            <h2>Wetter in CyberCity</h2>
+            <h2>
+            <a href="http://cyber-city.systems/" id="link">Wetter in CyberCity</a>
+            </h2>
             <div class="now">
-                <ul style="list-style: none; padding-left: 0px;">
+                <ul style="list-style: none; padding-left: 0px; margin-bottom: 1%;">
                     <li>
                         <div class="buttonLeft btn">
                             <button id = "previous">
