--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -111,8 +111,8 @@
                 </div>
             </div>
             <div class = "warning">
-                <h2 class="warnungh2">ACHTUNG HOCHWASSER</h2>
-                <div class="Warnung Text">Der stand der Meser wird in den folgenden Tagen stark steigen, bitte beachten sie die Hinweise der Feuerwehr!</div>
+                <h2 class="warnungh2">Warnungen</h2>
+                <div class="Warnung Text">Aktuell kein Warnungen</div>
             </div>
         </div>
 
