--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -71,8 +71,13 @@
 
             <div class = "weatherWeek">
                 <div class = "weekCard boxLeft">
-                    <h2>5 Tage übersicht</h2>
+                    <h2 id="weekcardh2">5 Tage übersicht</h2>
                     <ul style="list-style: none;" id="week">
+                        <li>
+                            <button id="last5Days">
+                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="6em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22" transform="matrix(-1 0 0 1 24 0)"></polygon></svg>
+                            </button>
+                        </li>
                         <li>
                             <div class = "day1Name"></div>
                             <div class = "day1Temp"></div>
@@ -106,6 +111,11 @@
                             <div class = "day5Temp"></div>
                             <div class = "day5TempNight"></div>
                             <img src="" alt="" class="iconDay5"/>
+                        </li>
+                        <li>
+                            <button id="next5Days">
+                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="6em" width="1em" xmlns="http://www.w3.org/2000/svg"><polygon fill="none" stroke="#000" stroke-width="2" points="6 2 18 12 6 22"></polygon></svg>
+                            </button>
                         </li>
                     </ul>
                 </div>
