Added function that evaluates all of the data and builds warnings when needed

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class = "warning">
                 <h2 class="warnungh2">Warnungen</h2>
-                <div class="Warnung Text">Aktuell kein Warnungen</div>
+                <div class="WarnungText"></div>
             </div>
         </div>
 
