--- a/public/riverDiagramm.html
+++ b/public/riverDiagramm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="buttonBack">
-        <a href="index.html">
+        <a href="/Umwelt">
             <button>zurück</button>
         </a>
     </div>
