Updated file structure, added events and server routine

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Wetter in CyberCity</title>
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/api-handler.js" defer></script>
+    <script src="public/js/api-handler.js" defer></script>
 </head>
 <body>
     <div class = "main">
@@ -142,7 +142,7 @@
                             <h2>
                                 Aktivitäten in CyberCity
                             </h2>
-                            <div class="aktivitiesText">Heute ist Mitternachts-Shopping bis 2 Uhr!</div>
+                            <div class="aktivitiesText"></div>
                         </div>
 
                         <div class = "bottom right">
