Changed Nachts to Windböhe

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
                         <div class = "weatherIcon">
                             <div class="dt"></div>
                             <div class="feels_like"></div>
-                            <div class = "Nachts"></div>
                             <div class="humidity"></div>    
                             <div class="wind"></div>
+                            <div class="windGust"></div>
                             <div class="air-qualityText"></div>
                         </div>
                     </li>
