Cleaned up subsite riverDiagramm
Name changed, js link updated, css changed

--- a/public/index.html
+++ b/public/index.html
@@ -133,8 +133,8 @@
                     <div class= "last_hours">11:00:, 9:00: , 7:00: </div>
                     <div class= "last_days">Mi: , Di: , Mo: , So: , Sa: </div>
                     <div class = "last_weeks">Vor einer Woche: cm  |  Vor zwei Wochen: cm </div>
-                    <a href="riverDiagramm.html">
-                        <button a href="riverDiagramm.html" id="riverDetail" >Details anzeigen</button>
+                    <a href="meserdetails.html">
+                        <button a href="meserdetails.html" id="riverDetail" >Details anzeigen</button>
                     </a>
                 </div>
                     <div class="mobileRight">
