--- a/public/meserdetails.html
+++ b/public/meserdetails.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title>Wetter in CyberCity</title>
+    <title>Wasserstand der Meser in Cybercity</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="buttonBack">
-        <a href="/Umwelt">
+        <a href="/">
             <button>zurück</button>
         </a>
     </div>
     
     <div class="riverDiagramm" id="riverDiagramm">
-        <h1>Wasserstand Verlauf der letzten Tage</h1>
+        <h1>Wasserstand der letzten Tage</h1>
         <img
         src="https://pegelonline.wsv.de/webservices/rest-api/v2/stations/2f56e265-cd67-4ea1-8529-549b6ccf273a/W/measurements.png?start=P30D&width=725&height=220"
         width="725"
@@ -28,4 +28,4 @@
         </div>        
     </div>
 </body>
-<script src="riverDiagramm.js"></script>
+<script src="js/riverDiagramm.js"></script>
