Added logo in title

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     <div class = "main">
         <div class = "element left">
             <h2>
-            <a href="http://cyber-city.systems/" id="link">Wetter in CyberCity</a>
+            <a href="http://cyber-city.systems/" id="link">
+            <img class="logo" src="./css/media/logo.png" alt="" width="auto" height="50px">
+                Wetter in CyberCity
+            </a>
             </h2>
             <div class="now">
                 <ul style="list-style: none; padding-left: 0px; margin-bottom: 1%;">
