--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Wetter in CyberCity</title>
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/api-handler.js" defer></script>
+    <script src="js/displayData.js" defer></script>
 </head>
 <body>
     <div class = "main">
