"Warnungen" is now hidden, if no warnings are displayed

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
                     </ul>
                 </div>
             </div>
-            <div class = "warning">
+            <div class = "warning" id="warningDIV">
                 <h2 class="warnungh2">Warnungen</h2>
                 <div class="WarnungText"></div>
             </div>
